# gator

./: .gitignore  AGENTS.md  LICENSE  README.md  TASKS.md  __init__.py  croc_gui.py  meson.build  org.croc.CrocGUI.yml  org.gator.Gator.devel.yml  org.gator.Gator.flatpakref  org.gator.Gator.yml  pyproject.toml  qr.py  receive_page.py  send_page.py  settings.py  transfer.py
.github/workflows/: ci.yml  flatpak-publish.yml
data/: croc-gui.in  gator.in  org.croc.CrocGUI.desktop  org.croc.CrocGUI.gschema.xml  org.croc.CrocGUI.metainfo.xml  org.gator.Gator.desktop  org.gator.Gator.gschema.xml  org.gator.Gator.metainfo.xml
flatpak/: gator.flatpakrepo
po/: POTFILES.in
src/croc_gui/: __init__.py  __main__.py  app.py  receive_page.py  send_page.py  settings.py
src/gator/: __init__.py  __main__.py  a11y.py  app.py  dialogs.py  i18n.py  preferences.py  qr.py  receive_page.py  send_page.py  settings.py  theme.py  transfer.py  window.py
tests/: test_qr.py  test_settings.py  test_theme.py  test_transfer.py
