[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "croc-gui"
version = "1.2"
description = "Modern GTK4/Libadwaita frontend for croc secure file transfers"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Your Name", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: File Sharing",
    "Topic :: Desktop Environment :: Gnome",
]
requires-python = ">=3.10"
dependencies = [
    "PyGObject >= 3.42",
    # Optional QR code support
    "qrcode[pil] >= 7.0; extra == 'qr'",
    "pyzbar >= 0.1.9; extra == 'qr'",
]

[project.optional-dependencies]
qr = ["qrcode[pil] >= 7.0", "pyzbar >= 0.1.9"]
dev = ["mypy", "black", "ruff", "pytest"]

[project.urls]
Homepage = "https://github.com/yourname/croc-gui"
Repository = "https://github.com/yourname/croc-gui.git"
"Bug Tracker" = "https://github.com/yourname/croc-gui/issues"

[project.scripts]
croc-gui = "croc_gui:main"

[project.gui-scripts] 
croc-gui = "croc_gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["croc_gui*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]

[tool.ruff.lint.per-file-ignores]
"croc_gui.py" = ["E402", "E501"]  # gi.require_version must precede imports; some lines from UI builders
"send_page.py" = ["E402", "E501"]
"receive_page.py" = ["E402", "E501"]
"transfer.py" = ["E501"]  # a couple of long logical lines are acceptable
"tests/*" = ["N812", "F401", "N999"]  # test imports often alias lower or use for fixtures; package naming

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["gi", "gi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["croc_gui", "send_page", "receive_page", "qr"]
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
disable_error_code = ["func-returns-value", "no-untyped-def", "no-any-return", "union-attr", "import-untyped"]