[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gator"
version = "1.4"
description = "Modern GTK4/Libadwaita frontend for croc secure file transfers"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Gator Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: File Sharing",
    "Topic :: Desktop Environment :: Gnome",
]
requires-python = ">=3.10"
dependencies = [
    "PyGObject >= 3.42",
    # Optional QR code support
    "qrcode[pil] >= 7.0; extra == 'qr'",
    "pyzbar >= 0.1.9; extra == 'qr'",
]

[project.optional-dependencies]
qr = ["qrcode[pil] >= 7.0", "pyzbar >= 0.1.9"]
dev = ["mypy", "black", "ruff", "pytest"]

[project.urls]
Homepage = "https://github.com/isyourbrainfoss/gator"
Repository = "https://github.com/isyourbrainfoss/gator.git"
"Bug Tracker" = "https://github.com/isyourbrainfoss/gator/issues"
Changelog = "https://github.com/isyourbrainfoss/gator/blob/main/TASKS.md"

[project.scripts]
gator = "gator:main"

[project.gui-scripts]
gator = "gator:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gator*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]

[tool.ruff.lint.per-file-ignores]
# gi.require_version() must precede imports; intentional side-effect imports + long doc lines tolerated
"src/gator/app.py" = ["E402", "E501"]
"src/gator/send_page.py" = ["E402", "E501"]
"src/gator/receive_page.py" = ["E402", "E501"]
"src/gator/qr.py" = ["E402"]
"src/gator/transfer.py" = ["E501"]
"tests/*" = ["N812", "F401", "N999"]
"__init__.py" = ["N999"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["gi", "gi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gator", "send_page", "receive_page", "qr"]
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
disable_error_code = ["func-returns-value", "no-untyped-def", "no-any-return", "union-attr", "import-untyped"]